test/fail/template-page-clash.app
// Multiple definitions with name 'theName'
application test

define page root() { }

define page theName() {
	
}

define template theName() {
	
}

